# klarity-decoder

./: CMakeLists.txt  README.md
include/: decoder.h  media.h
src/: decoder.cpp  format.cpp  frame.cpp  media.cpp
